# simplenote-hs

./: simplenote.cabal
Network/: Simplenote.hs
Network/Simplenote/: Request.hs
